@@ -40,3 +40,7 @@ purge (const short purge_after, const struct waste_containers *waste, char *time
 
 bool
 is_time_to_purge (bool force);
+
+short
+orphan_maint(struct waste_containers *waste, const int waste_dirs_total,
+              char *time_now, char *time_str_appended);
